fix: only collapse on tablet and below

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -100,19 +100,7 @@ aside.main-sidebar {
 
   }
 
-  //float the sidebar
-  &.collapsed {
-    display: block !important;
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 25%;
-    max-width: 235px;
-    padding-left: 8px !important;
-    padding-top: 65px;
-    margin-bottom: -170px;
-    z-index: 1;
-  }
+
 }
 
 main.main-content {
@@ -121,20 +109,22 @@ main.main-content {
 }
 
 
-/** Web and above **/
-@media (min-width: 992px) {
-
+/**Tablet and belo**/
+@media (max-width: 992px) {
   aside.main-sidebar {
+    //float the sidebar
     &.collapsed {
-      display: none !important;
-
-      + main.main-content {
-        width: 100%;
-        height: 100%;
-        min-height: 100vh;
-      }
+      display: block !important;
+      position: absolute;
+      top: 0;
+      left: 0;
+      min-width: 25%;
+      max-width: 235px;
+      padding-left: 8px !important;
+      padding-top: 65px;
+      margin-bottom: -170px;
+      z-index: 1;
     }
   }
-
-
 }
+
